# tamis

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: run-c-tests.yml  run-python-tests.yml
examples/: example.py
src/tamis/: __init__.py  tamis.py
src/tamis/_tamis/: ebcd.pxd  ebcd.pyx  ebcd_computation.c  ebcd_computation.h
tests/c/: Makefile  TestEbcd.c
tests/c/unity/src/: unity.h
tests/python/: test_ebcd.py
