[metadata]
name = tamis
version = attr: tamis.__version__
url = https://github.com/oboulant/tamis/
license = BSD-2-Clause
license_files = LICENSE
author = Olivier Boulant, Charles Truong, Thomas Moreau
author_email = olivier.boulant@hey.com
maintainer = Olivier Boulant, Charles Truong, Thomas Moreau
description = Block Coordinate Descent, implemented in C, wrapped in Python, following Bleakley & Vert 2011
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    change point detection
    signal segmentation
    computer science
    machine learning
    kernel methods
    time series
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Mathematics
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License

[options]
zip_safe = True
include_package_data = True
python_requires = >= 3.6
install_requires =
    numpy
    scipy
packages = find:
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
display = matplotlib
dev =
    pre-commit
    ruptures

[build_ext]
inplace=1